--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,3 +1,8 @@
+.header__logo
+  width: 292px !important
+
+//------------------------
+  
 .card_colo1
   background-color: lighten(#3366C2, 45%)
   &:before
@@ -9,6 +14,16 @@
   margin: auto   
   width: auto
   height: auto
+
+.mnR
+  margin-right: -24px !important
+
+.mnL
+  margin-left: -24px !important
+
+.zInd3
+  position: relative
+  z-index: 3
 
 .img-c
   position: relative
